changed default vals

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 
         
 
-        var bPrevent = false;
-        var bHoldKeys = true ;
+        var bPrevent = true;
+        var bHoldKeys = false ;
         var bNoRepeat = true ;
         $(document).ready(() => {
 
