--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         
 
-        var bPrevent = true;
+        var bPrevent = false;
         var bHoldKeys = false ;
         var bNoRepeat = true ;
         $(document).ready(() => {
