--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
             var cp = $("#ctrlpanel");
             cp.append("<a class='chkbx' href='javascript:clear();'>Reset</a>");
 
-            createChckbx(cp,"Prevent default","bPrevent")
-            createChckbx(cp,"Hold keys","bHoldKeys")
-            createChckbx(cp,"No repeat","bNoRepeat")
+            createChckbx(cp,"Bloquer action par défaut","bPrevent")
+            createChckbx(cp,"Maintenir touches enfoncées","bHoldKeys")
+            createChckbx(cp,"Empêcher répétitions","bNoRepeat")
             
         });
 
