adding sources link

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 
 <body>
 
-    <div id="ctrlpanel"></div>
+    <div style="float:right;font-size:10px;color:grey">Sources : <a href="https://github.com/jcfrog/jckeyb">https://github.com/jcfrog/jckeyb</a></div>
+    <div id="ctrlpanel"></div>  
     <div style="margin: 100px auto;width:90%">
         <div>
             <textarea id="myInput" style="font-size: 30px;width:100%"></textarea>
         </div>
         <object id="svg-mouse" style="display:inline-block" data="layouts/mouse.svg" type="image/svg+xml"
-            width="9%"></object>
+        width="9%"></object>
         <object id="svg-keyboard" style="display:inline-block" data="layouts/Azerty_fr_flat.svg" type="image/svg+xml"
-            width="90%"></object>
+        width="90%"></object>
     </div>
     <script>
         // https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/code/code_values
